<resources>
    <string name="app_name">TaskOrganizer</string>
    <string name="title">Title</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_deadline">Task Deadline</string>
    <string name="reminder">Reminder</string>
    <string name="task_place">Place</string>
    <string name="task_done">Done?</string>
    <string name="task_excuse">Excuse</string>
    <string name="save_task">Save Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="create_task">Create Task</string>
    <string name="title_create">Create New Task</string>
    <string name="title_details">Show Task Details</string>
    <string name="title_all">All Tasks</string>
    <string name="high_priority">Высокий приоритет</string>
    <string name="normal_priority">Средний приоритет</string>
    <string name="low_priority">Низкий приоритет</string>
    <string name="confirm">Confirm</string>
    <string name="select_the_sort_type">Select the sort type</string>
    <string name="sort_by_deadline_data">Sort by deadline data</string>
    <string name="sort_by_default">Sort by default</string>
    <string name="sort_by_priority">Sort by priority</string>
    <string name="sort_by_creation_data">Sort by creation data</string>
</resources>