<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.fragments.details.DetailsFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                app:cardElevation="@dimen/card_elevation">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/task_title"
                    style="@style/task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondary_green_086"
                    android:gravity="center_vertical"
                    android:hint="@string/task_title"
                    android:textAppearance="@style/text_task_title" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                app:cardElevation="@dimen/card_elevation">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/task_description"
                    style="@style/task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondary_green_072"
                    android:gravity="center_vertical"
                    android:hint="@string/task_description"
                    android:textAppearance="@style/task_data" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                app:cardElevation="@dimen/card_elevation">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/task_deadline"
                    style="@style/task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondary_green_058"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/task_deadline"
                    android:inputType="datetime"
                    android:textAppearance="@style/task_data" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondary_green_044">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/task_reminder"
                        style="@style/task"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/reminder"
                        android:textAppearance="@style/task_data" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/check_box_reminder"
                        android:layout_width="@dimen/width_check_box"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                app:cardElevation="@dimen/card_elevation">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/task_place"
                    style="@style/task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondary_green_030"
                    android:gravity="center_vertical"
                    android:hint="@string/task_place"
                    android:textAppearance="@style/task_data" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="@dimen/vertical_margin"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondary_green_016">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/task_done"
                        style="@style/task"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/task_done"
                        android:textAppearance="@style/task_data" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/check_box_done"
                        android:layout_width="@dimen/width_check_box"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="@dimen/card_elevation">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/task_excuse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondary_green_007"
                    android:gravity="center"
                    android:padding="@dimen/excuse_padding"
                    android:text="@string/task_excuse"
                    android:textAppearance="@style/text_style"
                    android:textSize="@dimen/text_size_task_excuse" />
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_margin" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_height="@dimen/bottom_height"
            android:text="@string/save_task"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_edit"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_height="@dimen/bottom_height"
            android:text="@string/edit_task" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_height="@dimen/bottom_height"
            android:text="@string/delete_task" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
